fix layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -142,10 +142,10 @@ body::-webkit-scrollbar {
     @apply scroll-m-20 pb-2 text-3xl font-semibold tracking-tight first:mt-0;
   }
   h3 {
-    @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+    @apply scroll-m-20 text-xl font-semibold tracking-tight;
   }
   h4 {
-    @apply scroll-m-20 text-xl font-semibold tracking-tight;
+    @apply scroll-m-20 text-lg font-semibold tracking-tight;
   }
   p {
     @apply leading-7 text-muted-foreground max-w-2xl;
